<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- General -->
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="stock_symbol_allowed_characters" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!-- The reason why it is translatable is the order of the values in RTL layout direction, -->
    <!-- e.g. +$1000 (10%) on LTR direction, but (10%) +$1000 on RTL directions. The value in  -->
    <!-- the parenthesis is a secondary information and it should follow the primary information. -->
    <string name="stock_price_change_combined_format" translatable="true"><xliff:g id="absolute" example="+$1000.00">%s</xliff:g> (<xliff:g id="percentage" example="10.00%">%s</xliff:g>)</string>
    <string name="stock_history_point_value_separator" translatable="false">, </string>

    <string name="error_stocks_are_out_of_date" translatable="true">Warning: Stocks prices are more than 10 minutes old! They will be automatically updated when the device is online.</string>

    <!-- Preferences -->
    <string name="pref_last_stock_update_date_key" translatable="false">lastStockUpdateDate</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key" translatable="false">stocks</string>

    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="pref_default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="pref_default_stocks_apple" translatable="false">AAPL</string>
    <string name="pref_default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="pref_default_stocks_facebook" translatable="false">FB</string>

    <!-- Activity Main -->
    <string name="activity_main_action_change_units" translatable="false">@string/pref_display_mode_key</string>

    <string name="activity_main_menu_switch_dollar_description" translatable="true">Switch display unit to dollar</string>
    <string name="activity_main_menu_switch_percentage_description" translatable="true">Switch display unit to percentage</string>

    <string name="activity_main_refresh_description" translatable="true">Pull down for stock list refresh</string>

    <string name="activity_main_list_item_symbol_text" translatable="false">STCK</string>
    <string name="activity_main_list_item_price_text" translatable="false">$1234.56</string>
    <string name="activity_main_list_item_change_text" translatable="false">-$9.99</string>
    <string name="activity_main_list_item_unknown_stock" translatable="true">Unknown</string>

    <string name="activity_main_dialog_title" translatable="true">Add Stock</string>
    <string name="activity_main_dialog_hint" translatable="true">Symbol (e.g. GOOG)</string>
    <string name="activity_main_dialog_cancel" translatable="true">Cancel</string>
    <string name="activity_main_dialog_add" translatable="true">Add</string>

    <string name="activity_main_dialog_symbol_description" translatable="true">Write a symbol here e.g. GOOG</string>

    <string name="activity_main_fab_description" translatable="true">Add new stock to watch</string>

    <string name="activity_main_error_no_network" translatable="true">No network connectivity!\nWill load stock cursor when the network is available.</string>
    <string name="activity_main_error_no_stocks" translatable="true">No stocks added!\nHit the floating action button to add one.</string>

    <string name="activity_main_toast_stock_added_no_connectivity" translatable="true">Symbol %s added. Will refresh when network available.</string>
    <string name="activity_main_toast_no_connectivity" translatable="true">Will refresh when network available.</string>

    <string name="activity_main_error_display_text" translatable="true">Something bad happened. Error message.</string>

    <!-- Activity Stock Details -->
    <string name="activity_stock_details_symbol_text" translatable="false">STCK</string>
    <string name="activity_stock_details_price_text" translatable="false">$1234.56</string>
    <string name="activity_stock_details_change_text" translatable="false">-$1.54 (1.37%)</string>

    <string name="activity_stock_details_error_general" translatable="true">Sorry, something went wrong.\nPlease navigate back  and try again.</string>

    <string name="activity_stock_details_history_date_label_format" translatable="false">yyyy-MM-dd</string>
    <string name="activity_stock_details_history_description" translatable="false"><xliff:g id="symbol" example="GOOG">%s</xliff:g>\@YahooFinance</string>
    <string name="activity_stock_details_history_no_data_error" translatable="true">No data to display.</string>

    <string name="activity_stock_details_history_content_description" translatable="true">History graph of price change</string>

    <!-- Widget Stock List -->
    <string name="widget_stock_list_symbol_text" translatable="false">STCK</string>
    <string name="widget_stock_list_price_text" translatable="false">$1234.56</string>
    <string name="widget_stock_list_change_text" translatable="false">-$1.54 (1.37%)</string>

    <string name="widget_stock_list_error_no_stocks" translatable="true">No stocks to show!\nClick here to fix it.</string>

</resources>
