<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/activity_main_list_item_symbol"
        style="@style/StockSymbolTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        tools:text="@string/activity_main_list_item_symbol_text" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end">

        <TextView
            android:id="@+id/activity_main_list_item_error_display"
            android:text="@string/activity_main_list_item_unknown_stock"
            android:textSize="@dimen/text_size_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/activity_main_list_item_price"
            style="@style/BidPriceTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_main_item_price_end_margin"
            tools:text="@string/activity_main_list_item_price_text" />

        <TextView
            android:id="@+id/activity_main_list_item_change"
            style="@style/PercentChangeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/percent_change_pill_green"
            android:paddingStart="@dimen/price_change_background_horizontal_padding"
            android:paddingEnd="@dimen/price_change_background_horizontal_padding"
            tools:text="@string/activity_main_list_item_change_text" />

    </LinearLayout>

</LinearLayout>
